# bot_trader_angry

./: .env.example  .gitignore  CLAUDE.md  HISTORIAL_VERSIONES_V12.txt  METAS_FUTURAS_V12.txt  METODOLOGIA_TESTING.md  PLAN_EXPERIMENTOS_V95.md  README.md  REVISION_FEATURES_V12.txt  ada_hybrid_system.py  alt_data_collector.py  alt_data_fetcher.py  analyze_all_models.py  analyze_drawdown.py  analyze_failed_trades.py  analyze_filters_per_model.py  analyze_market_conditions.py  backtest_adaptive_v10.py  backtest_daily_breakdown.py  backtest_experiments.py  backtest_experiments_v2.py  backtest_metralladora.py  backtest_v11_pro_filters.py  backtest_v12_2b_tpsl_only.py  backtest_v12_filtered_pairs.py  backtest_v12_hybrid.py  backtest_v1304_params.py  backtest_v13_03.py  backtest_v13_full.py  backtest_v13_with_btc.py  backtest_v15_committee.py  backtest_v85_vs_v95atr.py  backtest_v95_fast.py  backtest_vbeta_test.py  btc_adaptive_model.py  btc_adaptive_results.csv  btc_advanced_experiments.py  btc_ensemble_confidence.py  btc_experiments_results.json  btc_hybrid_audit.py  (+68 more)
analysis/: all_models_trades.json  all_trades.json  failed_trades_detail.json  failure_analysis_summary.json  synthetic_validation_results.json  validation_synthetic_v2.json  validation_test_results.json
archive_scripts/: analyze_losing_trades.py  analyze_regime_distribution.py  analyze_tpsl_optimization.py  backtest_experiments_v3.py  backtest_specialized_bot.py  backtest_specialized_fast.py  backtest_specialized_v2.py  backtest_v10_1.py  backtest_v12_1_specialized.py  backtest_v12_2_combined.py  backtest_v12_3_adaptive_filters.py  backtest_v12_4_calibrated_detector.py  backtest_v12_5_multitf.py  backtest_v12_optimized.py  (+8 more)
(+250 files in other folders)
