[tool.poetry]
package-mode = false

[project]
name = "binance-scalper-bot"
version = "0.1.0"
description = "High-frequency trading bot for Binance"
authors = [
    {name = "Developer"}
]
requires-python = ">=3.12"
dependencies = [
    "ccxt (>=4.5.37,<5.0.0)",
    "pandas (>=2.0,<3.0)",
    "pandas-ta (>=0.4.71b0,<0.5.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)",
    "websocket-client (>=1.9.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "optuna (>=4.7.0,<5.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "scipy (>=1.14.0,<2.0.0)",
    "yfinance (>=0.2.40,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
